
BootZilla v5.2 Changelog
-*  Designates an update or bugfix.
- Designates a removal
+   Designates an addition.
*~* Designates a design change.
-----------------------------------

BootZilla v5.2 Build 091007 - Final
-* Fixed bzrelease.zip file creation to make it open properly in every zip application
*~* Changed designation of build to non-internal
-* Minor updates to SFXPatch2.
-- Removed NOD32 antivirus in lieu of Microsoft Security Essentials
++ Added all versions of Microsoft Security Essentials
+ Added MyDefrag SFX to sfxpatch2.
-* Updated and corrected bad links in index.html.
-* Fixed improper download of pc-decrapifier-2.0.0 file in bz_utils.cmd.
*~* Finalized style-sheet for index.html.
-* Fixed a few bugs that cropped up in the updates files. Should now clean up all old files properly.


BootZilla v5.2 Build 091006 - Final RC
-* Updated index.html file to reflect final release changes
-* Updated CCleaner to v2.24
-* Updated createdirs.cmd to no longer create ViewPointKiller directory.
-* Updated Sanitize scripts (update scripts are included)
-* Updated PCdecrapifier to v2.1.0
*** Tested on Windows 7
*~* AddonPacks functionality is integrated, but it is disabled in the menu. If you need/want it, enable it.
-* Made some of the prompts in the script more user-friendly.
-* Merged all old update files into a single update file. Altered update code to support versions 
of BootZilla from 4.2.6 thru 5.2 Beta. This was an important change.
   -* Created a bz4to5.cmd, which converts a BootZilla 4.x to a basic 5.0 clean directory.
-* Updated ImgBurn to version 2.5, and included License into buildpackage.cmd
-- Removed BootZilla AutoRun from minilatest. It goes against the reason for minilatest.
+ Added GMER rootkit scanner/remover to bz_mal.
+ Added link to Microsoft Security Essentials free Antivirus in index.html. 
  I'm not about to serve multiple files for multiple platforms. Not yet anyway (64-bit, maybe)