@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>BootZilla v5.2 - October 2009</title>
+	<title>BootZilla v5.2.0 - October 2009</title>
     <link rel="stylesheet" href="bzstyles.css" type="text/css" />
 </head>
 <body class="basic">
-	<b><h1>BootZilla v5.2</h1></b><span class="smallstyled">Build 091007<br />Final Release</span>
+	<b><h1>BootZilla v5.2.0</h1></b><span class="smallstyled">Build 091007<br />Final Release</span>
         <span class="desc">
 		<p><b>What is BootZilla?</b><br />A set of tools to help remove and clean up after malware infections.
 
@@ -105,6 +105,6 @@
         </div>
         <p>
 		<!-- Footer -->
-		<div class="footer"><p>&copy;2004-2009 by Jim "<a href="http://www.jim-gall.com/">jimmsta</a>" Gall<br> &copy;2008-2009 <a href="http://www.bootzilla.org">BootZilla.org</a></div>
+		<div class="footer"><p>&copy;2004-2009 by Jim "<a href="http://www.jim-gall.com/">jimmsta</a>" Gall<br> &copy;2008-2009 <a href="http://www.bootzilla.org">BootZilla.org</a><br>This edition has been hotfixed for BootCD functionality.</div>
 </body>
 </html> 
